<resources>
    <string name="app_name">StampApp</string>
    <string name="db_name">stamp_app.db</string>
    <string name="filename_stamp_list_json">stamp_list.json</string>

    <string name="image_name_stamp">Image for stamp</string>
    <string name="bottom_menu_stamp">Stamp</string>
    <string name="bottom_menu_camera">Camera</string>
    <string name="bottom_menu_location">Map</string>
    <string name="qr_camera_fragment_button_qr_get_label">QRコードでスタンプをGET</string>
    <string name="title">スタンプラリー</string>
    <string name="stamp_rally_description">色々な場所にあるQRコードを探してスタンプを集めよう！！スタンプが集まったら、すてきなご褒美がもらえるよ！</string>
    <string name="stamp_path_format">file:///android_asset/image/blue_stamp_%s.png</string>
    <string name="congratulations_title">おめでとうございます。</string>
    <string name="congratulation_desc">すべてのスタンプ集め終わりました。おめでとうございます。お疲れ様でした！</string>
    <string name="btn_recive_prize">景品を受け取る</string>
    <string name="iv_description_stamp_image">スタンプ画像</string>
    <string name="dialog_title_new_stamp_get">新しいスタンプをGET!</string>

</resources>
